--- a/php/404.html
+++ b/php/404.html
@@ -1,15 +1,53 @@
+<!--Main Page that will include all the other smaller sections (header, presentation, portofolio, about, contact, footer-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <title>404 Page not found</title>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <title>Page Not Found</title>
+
+    <!--Bootstrap-->
+    <link href="../../Bootstrap2/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.min.css">
+
+    <!--Google Fonts for this project-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto:300" rel="stylesheet">
+
+    <!-- My CSS -->
+    <link href="../css/main.css" rel="stylesheet">
+    <!-- Icon -->
+    <!-- <link rel="shortcut icon" href="../img/#"> -->
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- [if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif] -->
 </head>
 
 <body>
-    <h1>Sorry! The page that your request can't be found!</h1>
+    <div class="jumbotron text-center">
+        <h1>Oops! The requested page was not found</h1>
+        <a href="home" class="btn btn-primary btn-lg" style="margin-top: 50px">Go back to site</a>
+    </div>
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="../../Bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- The js script for this file -->
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
